--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <div class="hero-content">
                 <h1>Welcome to Sobrul's Stat Talk</h1>
                 <p>Explore my daily works, class lectures, notes, and video lectures as I navigate through the fascinating world of statistics at JnU.</p>
-                <a href="https://github.io/Sobrulstattalk" class="btn">Explore My Resources</a>
+                <a href="https://github.com/Sobrul3/stat" class="btn">Explore My Resources</a>
                 
             </div>
         </section>
