--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                     <ul class="nav-links">
                         <li><a href="#" class="active"> Home </a></li>
                         <li><a href="#"> Statistics JnU </a></li>
-                        <li><a href="#"> My Statistics </a></li>
+                        <li><a href="https://sobrul3.github.io/stat/"> My Statistics </a></li>
                         <li><a href="#"> About </a></li>
                     </ul>
                     
@@ -451,8 +451,7 @@
             <div class="hero-content">
                 <h1>Welcome to Sobrul's Stat Talk</h1>
                 <p>Explore my daily works, class lectures, notes, and video lectures as I navigate through the fascinating world of statistics at JnU.</p>
-                <a href="https://github.com/Sobrul3/stat" class="btn">Explore My Resources</a>
-                
+                <a href="https://sobrul3.github.io/stat/" class="btn">Explore My Resources</a>
             </div>
         </section>
 
