--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
         
         header {
-            background: linear-gradient(to right, #2ecc71, #e74c3c);
+            background: linear-gradient(to right, #2ecc71, #2ecc71 25%, #e74c3c 50%, #2ecc71 75%, #2ecc71);
             color: white;
             padding: 1.5rem 0;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
