--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                 <div class="header-right">
                     <ul class="nav-links">
                         <li><a href="#" class="active"> Home </a></li>
-                        <li><a href="my_statistics.html"> Statistics JnU </a></li>
+                        <li><a href="statistics_jnu.html"> Statistics JnU </a></li>
                         <li><a href="https://sobrul3.github.io/stat/"> My Statistics </a></li>
                         <li><a href="about_me.html"> About </a></li>
                     </ul>
