--- a/about_me.html
+++ b/about_me.html
@@ -513,9 +513,9 @@
                 <span>Sobrul's Stat Talk</span>
             </div>
             <ul class="nav-links">
-                <li><a href="https://sobrul3.github.io/sobrulstattalk/">Home</a></li>
-                <li><a href="https://sobrul3.github.io/sobrulstattalk/my_statistics.html">Statistics JnU</a></li>
-                <li><a href="#">My Statistics</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="statistics_jnu.html">Statistics JnU</a></li>
+                <li><a href="https://sobrul3.github.io/stat/">My Statistics</a></li>
                 <li><a href="#" class="active">About</a></li>
             </ul>
         </div>
@@ -640,7 +640,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-links">
-                <a href="https://sobrul3.github.io/sobrulstattalk/">Home</a>
+                <a href="index.html">Home</a>
                 <a href="https://t.me/sobrulstattalk">Lecture Notes</a>
                 <a href="https://www.youtube.com/@sobrulstattalk">Video Lectures</a>
             </div>
