--- a/statistics_jnu.html
+++ b/statistics_jnu.html
@@ -352,10 +352,10 @@
                 <span>Sobrul's Stat Talk</span>
             </div>
             <ul class="nav-links">
-                <li><a href="https://sobrul3.github.io/sobrulstattalk/">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#" class="active">Statistics JnU</a></li>
-                <li><a href="#">My Statistics</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="https://sobrul3.github.io/stat/">My Statistics</a></li>
+                <li><a href="about_me.html">About</a></li>
             </ul>
         </div>
     </header>
@@ -430,7 +430,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-links">
-                <a href="https://sobrul3.github.io/sobrulstattalk/">Home</a>
+                <a href="index.html">Home</a>
                 <a href="https://t.me/sobrulstattalk">Lecture Notes</a>
                 <a href="https://www.youtube.com/@sobrulstattalk">Video Lectures</a>
             </div>
