--- a/statistics_jnu.html
+++ b/statistics_jnu.html
@@ -416,14 +416,14 @@
         <h2>SPSS & STATA Data</h2>
         <p>Here all are available for Practicing SPSS and STATA.</p>
          <ul style="list-style-type: disclosure-closed; padding-left: 20px; font-size: 18px; color: orange; margin-top: 15px;">
-             <li><a href="downladatique.md" style="text-decoration: none;">Atique Sir</a></li>
-             <li><a href="downladagiash.md" style="text-decoration: none;">Giash Sir</a></li>
-             <li><a href="downladsobrul.md" style="text-decoration: none;">Sobrul</a></li>
+             <li><a href="datique.md" style="text-decoration: none;">Atique Sir</a></li>
+             <li><a href="dgiash.md" style="text-decoration: none;">Giash Sir</a></li>
+             <li><a href="dsobrul.md" style="text-decoration: none;">Sobrul</a></li>
          </ul>
         
         <h2>R Code of 7th Semester Lab</h2>
         <ul style="list-style-type: disclosure-closed; padding-left: 20px; font-size: 18px; color: orange; margin-top: 15px;">
-             <li><a href="Rcode.md" style="text-decoration: none;">R Code</a></li>
+             <li><a href="dRcode.md" style="text-decoration: none;">R Code</a></li>
         </ul>
     </section>
 
