--- a/statistics_jnu.html
+++ b/statistics_jnu.html
@@ -416,7 +416,7 @@
         <h2>SPSS & STATA Data</h2>
         <p>Here all are available for Practicing SPSS and STATA.</p>
          <ul style="list-style-type: disclosure-closed; padding-left: 20px; font-size: 18px; color: orange; margin-top: 15px;">
-             <li><a href="datique.md" style="text-decoration: none;">Atique Sir</a></li>
+             <li><a href="datique.html" style="text-decoration: none;">Atique Sir</a></li>
              <li><a href="dgiash.md" style="text-decoration: none;">Giash Sir</a></li>
              <li><a href="dsobrul.md" style="text-decoration: none;">Sobrul</a></li>
          </ul>
