--- a/statistics_jnu.html
+++ b/statistics_jnu.html
@@ -420,7 +420,7 @@
              <li><a href="dsobrul.html" style="text-decoration: none;">Sobrul</a></li>
          </ul>
         
-        <h2>R Code of 7th Semester Lab</h2>
+        <h2>R Code of 7<sup>th</sup> Semester Lab</h2>
         <ul style="list-style-type: disclosure-closed; padding-left: 20px; font-size: 18px; color: orange; margin-top: 15px;">
              <li><a href="Rcode.html" style="text-decoration: none;">R Code</a></li>
         </ul>
