--- a/about_me.html
+++ b/about_me.html
@@ -153,6 +153,7 @@
             margin-bottom: 1rem;
             line-height: 1.7;
             color: #555;
+            text-align: justify;
         }
         
         .stats-section {
@@ -516,7 +517,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="statistics_jnu.html">Statistics JnU</a></li>
                 <li><a href="https://sobrul3.github.io/stat/">My Statistics</a></li>
-                <li><a href="#" class="active">About</a></li>
+                <li><h3 style="color: #89049b">About Me</h3></li>
             </ul>
         </div>
     </header>
@@ -645,7 +646,8 @@
                 <a href="https://www.youtube.com/@sobrulstattalk">Video Lectures</a>
             </div>
             <div class="footer-contact">
-                <p style="color: orange;">Email: sobrulss@gmail.com</p>
+               <p>For any queries : <a href="mailto:sobrulss@gmail.com" style="color: orange; text-decoration: none;">
+    sobrulss@gmail.com</a></p>
             </div>
         </div>
         <div class="copyright">
