--- a/index.html
+++ b/index.html
@@ -615,7 +615,8 @@
                 </ul>
                 
                 <div class="footer-contact">
-                    <p style="color: orange;">Email: sobrulss@gmail.com</p>
+                <p>For any queries : <a href="mailto:sobrulss@gmail.com" style="color: orange; text-decoration: none;">
+    sobrulss@gmail.com</a></p>
                 </div>
             </div>
             
