--- a/datique.html
+++ b/datique.html
@@ -315,6 +315,46 @@
                         <td>Sample_Dataset_2014.sav</td>
                         <td><a href="assets/Atique Sir/Sample_Dataset_2014.sav" download class="download-btn">Download</a></td>
                     </tr>
+                    <tr>
+                        <td>Statistical Test (hypothesis).dta</td>
+                        <td><a href="assets/Atique Sir/File for Statistical Test (hypothesis).dta" download class="download-btn">Download</a></td>
+                    </tr>
+                    <tr>
+                        <td>car cleaning.dta</td>
+                        <td><a href="assets/Atique Sir/car cleaning.dta" download class="download-btn">Download</a></td>
+                    </tr>
+                    <tr>
+                        <td>data1.xlsx</td>
+                        <td><a href="assets/Atique Sir/data1.xlsx" download class="download-btn">Download</a></td>
+                    </tr>
+                    <tr>
+                        <td>data1.dta</td>
+                        <td><a href="assets/Atique Sir/data1.dta" download class="download-btn">Download</a></td>
+                    </tr>
+                    <tr>
+                        <td>data2.xlsx</td>
+                        <td><a href="assets/Atique Sir/data2.xlsx" download class="download-btn">Download</a></td>
+                    </tr>
+                    <tr>
+                        <td>data2.dta</td>
+                        <td><a href="assets/Atique Sir/data2.dta" download class="download-btn">Download</a></td>
+                    </tr>
+                    <tr>
+                        <td>data3.xlsx</td>
+                        <td><a href="assets/Atique Sir/data3.xlsx" download class="download-btn">Download</a></td>
+                    </tr>
+                    <tr>
+                        <td>data3.dta</td>
+                        <td><a href="assets/Atique Sir/data3.dta" download class="download-btn">Download</a></td>
+                    </tr>
+                    <tr>
+                        <td>hsbdemo.dta</td>
+                        <td><a href="assets/Atique Sir/hsbdemo.dta" download class="download-btn">Download</a></td>
+                    </tr>
+                    <tr>
+                        <td>students.dta</td>
+                        <td><a href="assets/Atique Sir/students.dta" download class="download-btn">Download</a></td>
+                    </tr>
                     </tbody>
             </table>
         </section>
